fix weekdays labels alignment

--- a/consumer-example/widget/run-heatmap.css
+++ b/consumer-example/widget/run-heatmap.css
@@ -79,7 +79,7 @@
   display: grid;
   font-size: 9px;
   line-height: 1;
-  margin-top: 16px;
+  margin-top: 0;
   min-width: 16px;
   row-gap: 2px;
   grid-template-rows: repeat(7, 10px);
